--- a/resources/dicts/relationship_events/normal_interactions/dislike/decrease.json
+++ b/resources/dicts/relationship_events/normal_interactions/dislike/decrease.json
@@ -7,7 +7,16 @@
 			"m_c and r_c agree about something trivial.",
 			"m_c is able to work together with r_c.",
 			"m_c and r_c actually get along better today.",
-            		"m_c and r_c were able to have a debate without it turning into an argument."
+            "m_c and r_c were able to have a debate without it turning into an argument.",
+			"m_c didn't expect r_c to be so amicable today.",
+			"m_c realizes that {PRONOUN/m_c/subject} misunderstood something r_c said.",
+			"m_c is too tired to be angry at r_c today, and learns something good about {PRONOUN/r_c/object} in the process.",
+			"m_c stops and thinks before assuming the worst of r_c.",
+			"When getting something to eat, m_c sees r_c allow someone else to take {PRONOUN/r_c/poss} favorite prey.",
+			"m_c sees r_c being gentle with an injured bug.",
+			"m_c thinks that r_c looks nice today.",
+			"m_c thinks that r_c smells nice today.",
+			"m_c is able to work together with r_c."
 		]
 	},
 	{
@@ -16,6 +25,16 @@
 		"interactions": [
 			"m_c apologized to r_c for something or other.",
 			"m_c and r_c actually get along better today.",
+			"m_c apologized to r_c for being rude the other day.",
+			"m_c and r_c actually get along better today.",
+			"m_c is surprised when r_c compliments {PRONOUN/m_c/object}.",
+			"m_c and r_c giggle over something frivolous.",
+			"m_c jumps in a puddle, splashing r_c. To m_c's surprise, r_c laughs.",
+			"m_c didn't expect an apology from r_c, but accepted it regardless.",
+			"r_c asks if one of m_c's wounds has healed well.",
+			"m_c has been a little kinder to r_c today.",
+			"m_c and r_c bond over something small.",
+			"m_c helps r_c with something {PRONOUN/r_c/poss} were struggling with.",
 			"m_c clears up a misunderstanding with r_c."
 		],
 		"reaction_random_cat": {
@@ -29,7 +48,19 @@
 			"m_c spends some time with r_c and they both end up understanding each other a little better.",
 			"m_c is rethinking how {PRONOUN/m_c/subject} {verb/m_c/feel/feels} about r_c and gives {PRONOUN/r_c/object} another chance.",
 			"m_c didn't see r_c at all today and admittedly was a little disappointed.",
-            		"m_c and r_c apologized over something petty they both did to each other."
+            "m_c and r_c apologized over something petty they both did to each other.",
+			"m_c realized that {PRONOUN/m_c/subject} {VERB/m_c/were/was} too harsh in {PRONOUN/m_c/poss} judgement of r_c.",
+			"m_c doesn't remember why {PRONOUN/m_c/subject} started disliking r_c.",
+			"m_c is still a little hurt by r_c, but wants to try and make amends.",
+			"m_c decides to be the bigger cat and plans to make amends with r_c.",
+			"Despite past disagreements, r_c is kind to m_c in passing.",
+			"m_c hears r_c purring during a nap.",
+			"m_c is frustrated with r_c, but hears {PRONOUN/r_c/object} crying alone and immediately feels guilty.",
+			"Though m_c has been unhappy with r_c, m_c helps {PRONOUN/r_c/object} with something.",
+			"m_c tries to find r_c to apologize for something, but finds {PRONOUN/r_c/object} playing with a Clanmate.",
+			"r_c does something endearing, which surprises m_c.",
+			"m_c stumbles upon r_c looking at the stars with wonder in {PRONOUN/r_c/poss} eyes.",
+			"m_c is rethinking how {PRONOUN/m_c/subject} feel about r_c and gives {PRONOUN/r_c/object} another chance."
 		]
 	},
 	{
@@ -37,7 +68,18 @@
 		"interactions": [
 			"m_c covered for r_c on something minor.",
 			"m_c cheers r_c up after a small disagreement.",
-			"m_c, while grabbing food for {PRONOUN/m_c/self}, saw r_c grabbing a really tasty looking rabbit and asked to share it with {PRONOUN/r_c/object}."
+			"m_c, while grabbing food for {PRONOUN/m_c/self}, saw r_c grabbing a really tasty looking rabbit and asked to share it with {PRONOUN/r_c/object}.",
+			"m_c spends some time with r_c and they both end up understanding each other a little better.",
+			"m_c and r_c realize they have a similar sense of humor.",
+			"m_c gets injured and, to {PRONOUN/m_c/poss} surprise, r_c is the first to help.",
+			"m_c and r_c find out they have nice conversations when they aren't bickering.",
+			"m_c reveals something to r_c. Apparently r_c can relate!",
+			"m_c and r_c spend some time together and nearly forget what made them upset with one another in the first place.",
+			"m_c and r_c both apologize to each other at the same time.",
+			"When explaining something, m_c is surprised that r_c understands.",
+			"m_c hesitantly asks to exchange prey with r_c. r_c agrees, since m_c's prey is {PRONOUN/r_c/poss} favorite kind, anyways.",
+			"The Clan is surprised to see m_c and r_c casually chatting over a meal.",
+			"m_c cheers r_c up after a small disagreement."
 		],
 		"reaction_random_cat": {
 			"dislike": "decrease"
@@ -63,7 +105,17 @@
 		"interactions": [
 			"m_c is surprised to hear r_c express an ideal {PRONOUN/m_c/subject} can agree with.",
 			"m_c and r_c realize they have more in common than previously thought.",
-			"m_c actually stood up for r_c when {PRONOUN/r_c/subject} {VERB/r_c/were/was} being scolded for something too harshly."
+			"m_c actually stood up for r_c when {PRONOUN/r_c/subject} {VERB/r_c/were/was} being scolded for something too harshly.",
+			"m_c didn't realize how generous r_c could be.",
+			"m_c sees r_c stand up for a Clanmate despite the pushback from {PRONOUN/r_c/poss} peers.",
+			"m_c overhears r_c saying something kind about {PRONOUN/m_c/object}.",
+			"m_c tries to look at r_c's actions from another perspective, and starts to like {PRONOUN/r_c/subject} more.",
+			"m_c notices that some of {PRONOUN/m_c/poss} Clanmates talk very highly of r_c.",
+			"The way r_c jumps to help a Clanmate makes m_c think {PRONOUN/r_c/subject} might not be all that bad.",
+			"There's something soothing about r_c that m_c never realized before.",
+			"m_c realizes how smart r_c is when it comes to certain things.",
+			"m_c talks to one of r_c's friends and begins to understand why others like {PRONOUN/r_c/object}.",
+			"m_c considers how to make amends with r_c after a long night of deliberation."
 		]
 	},
 	{
@@ -72,6 +124,15 @@
 		"interactions": [
 			"m_c and r_c joke around about how bad the other Clans smell.",
 			"r_c can't help but laugh when m_c tells a funny joke.",
+			"A Clanmate claims that m_c and r_c were sharing tongues.",
+			"m_c and r_c sincerely apologize to one another.",
+			"On a cold night, m_c decides to share a nest with r_c.",
+			"On a sunny day, m_c and r_c happen to sun bathe in the same place. They enjoy the silence.",
+			"r_c admits that m_c did something clever.",
+			"r_c sacrifices treatment for a cough in favor of m_c's ailment being addressed.",
+			"m_c and r_c fight over a piece of prey, but soon decide to share it instead.",
+			"The Clan has noticed m_c and r_c are smiling at each other more today.",
+			"m_c and r_c realize they have more in common than previously thought.",
 			"r_c thinks that m_c isn't so bad after all."
 		],
 		"reaction_random_cat": {
@@ -82,7 +143,11 @@
 		"id": "dislike_de_high3",
 		"intensity": "high",
 		"interactions": [
-			"m_c and r_c heckled another Clan at the Gathering together."
+			"m_c and r_c heckled another Clan at the Gathering together.",
+			"m_c and r_c worked well together on a patrol.",
+			"When they return from a patrol, m_c and r_c seem more at peace with each other than usual.",
+			"m_c and r_c defended their Clan at the Gathering together.",
+			"m_c and r_c had a great time on a patrol."
 		],
 		"reaction_random_cat": {
 			"dislike": "decrease"
