--- a/resources/dicts/relationship_events/normal_interactions/platonic/increase.json
+++ b/resources/dicts/relationship_events/normal_interactions/platonic/increase.json
@@ -5,10 +5,21 @@
 		"interactions": [
 			"m_c thinks r_c was nice to {PRONOUN/m_c/object} today.",
 			"m_c nods to r_c in acknowledgement as {PRONOUN/m_c/subject} {VERB/m_c/pass/passes} {PRONOUN/r_c/object}.",
-            		"m_c and r_c sunbathed together.",
-            		"m_c stopped r_c to pick a stray leaf out of {PRONOUN/r_c/poss} fur {PRONOUN/r_c/subject} hadn't noticed.",
-            		"m_c and r_c had a chat and realized they had the same favorite nesting material.",
-            		"r_c splashes m_c as {PRONOUN/m_c/subject} {VERB/m_c/pass/passes} a puddle."
+            "m_c and r_c sunbathed together.",
+            "m_c stopped r_c to pick a stray leaf out of {PRONOUN/r_c/poss} fur {PRONOUN/r_c/subject} hadn't noticed.",
+            "m_c and r_c had a chat and realized they had the same favorite nesting material.",
+            "r_c splashes m_c as {PRONOUN/m_c/subject} {VERB/m_c/pass/passes} a puddle.",
+			"m_c thought r_c was very polite today.",
+			"r_c does something that makes m_c's day a little happier.",
+			"r_c compliments m_c's name.",
+			"r_c compliments one of m_c's friends.",
+			"r_c mentions that m_c looks good today.",
+			"r_c tells m_c that {PRONOUN/m_c/poss} pelt is shiny today.",
+			"m_c wants to be closer to r_c.",
+			"r_c thanked m_c for bringing {PRONOUN/r_c/object} food.",
+			"r_c guides m_c to someone {PRONOUN/m_c/subject} {VERB/m_c/are/is} looking for.",
+			"m_c sees r_c put something back where it belongs.",
+			"m_c hears a nice story about r_c."
 		]
 	},
 	{
@@ -17,7 +28,17 @@
 		"interactions": [
 			"m_c is talking with r_c.",
 			"m_c asks r_c how {PRONOUN/r_c/subject}{VERB/r_c/'re/'s} doing.",
-			"m_c nods to r_c as they eat prey near each other."
+			"m_c nods to r_c as they eat prey near each other.",
+			"m_c and r_c roll up moss balls together.",
+			"m_c and r_c talk about what they see in the clouds.",
+			"m_c explains what a joke means to r_c.",
+			"m_c and r_c chat about Clan news.",
+			"m_c talks with r_c about some Clan drama.",
+			"m_c is asking r_c interesting questions.",
+			"m_c learns something new about a Clanmate from r_c.",
+			"m_c prevents something from falling on r_c.",
+			"m_c warns r_c about something on the ground so r_c doesn't trip.",
+			"m_c asks r_c how {PRONOUN/r_c/subject}{VERB/r_c/'re/'s} doing."
 		],
 		"reaction_random_cat": {
 			"platonic": "increase"
@@ -29,16 +50,30 @@
 			"m_c saw r_c the other day and did get a chance to meow hello!",
 			"m_c reminds r_c to grab something from the fresh-kill pile if {PRONOUN/r_c/subject} {VERB/r_c/have/has}n't already.",
 			"m_c is watching the shooting stars with r_c.",
-			"m_c panicked when r_c stumbled down a hill during a walk, but when {PRONOUN/r_c/subject} sat up perfectly fine, both cats had a laugh at r_c's clumsiness"
+			"m_c panicked when r_c stumbled down a hill during a walk, but when {PRONOUN/r_c/subject} sat up perfectly fine, both cats had a laugh at r_c's clumsiness",
+			"r_c points out that m_c's fresh-kill has gone bad before {PRONOUN/r_c/subject} {VERB/r_c/eat/eats} it.",
+			"m_c thinks r_c has interesting things to talk about.",
+			"m_c is fascinated by one of r_c's stories.",
+			"m_c likes the way r_c laughs.",
+			"m_c thinks that r_c is good at leading others.",
+			"m_c is impressed by some of r_c's advice.",
+			"r_c reminds m_c to grab something from the fresh-kill pile if {PRONOUN/r_c/subject} {VERB/r_c/have/has}n't already."
 		]
 	},
 	{
 		"id": "platonic_inc_med2",
 		"interactions": [
 			"m_c is telling a story to r_c.",
-			"m_c is sharing prey with r_c.",
+			"m_c is sharing a piece of fresh-kill with r_c.",
 			"m_c chats with r_c while grabbing something to eat.",
-			"m_c snuck some of r_c's favorite nesting material into {PRONOUN/r_c/poss} nest."
+			"m_c snuck some of r_c's favorite nesting material into {PRONOUN/r_c/poss} nest.",
+			"m_c is making up a new Clan with r_c.",
+			"m_c and r_c are chatting about what they're doing today.",
+			"m_c is talking about what to do tomorrow with r_c.",
+			"m_c is telling r_c something interesting about another Clan.",
+			"m_c and r_c laugh about something small together.",
+			"m_c spends some time sheltering with r_c during a storm.",
+			"m_c chats with r_c while grabbing something to eat."
 		],
 		"reaction_random_cat": {
 			"platonic": "increase"
@@ -50,10 +85,18 @@
 			"m_c waves to r_c with {PRONOUN/m_c/poss} tail as their patrols cross paths on the territory.",
 			"m_c calls to r_c to catch {PRONOUN/m_c/object} a nice fat mouse on {PRONOUN/r_c/poss} next hunting patrol.",
 			"m_c hopes {PRONOUN/m_c/subject} {VERB/m_c/are/is} assigned to patrol with r_c tomorrow.",
+			"m_c calls to r_c to catch {PRONOUN/m_c/object} a fat mouse on {PRONOUN/r_c/poss} next hunting patrol.",
+			"m_c and r_c have a fun patrol and plan to tell stories about it later to their Clanmates.",
+			"m_c stands up for r_c on a border patrol when confronted by another Clan.",
+			"m_c got into an unexpectedly in-depth conversation while on a patrol with r_c.",
+			"m_c and r_c had such a good time on a patrol that they came back late.",
+			"A Clanmate that went on patrol with m_c and r_c says they talked the entire time and almost left them behind.",
+			"m_c and r_c challenge one another during a hunting patrol.",
+			"m_c hopes {PRONOUN/m_c/subject} {VERB/m_c/are/is} assigned to patrol with r_c tomorrow.",
 			"m_c and r_c had a great time on patrol together!",
-            		"m_c missed a catch during a patrol but r_c cheered {PRONOUN/m_c/object} up.",
-            		"m_c surprised r_c with a really cool move during training.",
-            		"m_c and r_c were perfectly in sync during training!",
+            "m_c missed a catch during a patrol but r_c cheered {PRONOUN/m_c/object} up.",
+    		"m_c surprised r_c with a really cool move during training.",
+			"m_c and r_c were perfectly in sync during training!",
 			"m_c thanks r_c for what {PRONOUN/r_c/subject} {VERB/r_c/do/does} for the Clan."
 		],
 		"main_status_constraint": [
@@ -78,11 +121,16 @@
 			"r_c charms m_c.",
 			"r_c smiles at m_c whenever they meet.",
 			"r_c knows what to say to make m_c feel better.",
+			"m_c is inspired by r_c's confident demeanor.",
+			"m_c is easily swayed by r_c's words.",
+			"m_c thinks that r_c is so easy to get along with.",
+			"m_c wants to be as confident as r_c.",
 			"r_c compliments m_c for {PRONOUN/m_c/poss} good disposition."
 		],
 		"random_trait_constraint": [
 			"charismatic",
             		"flamboyant",
+					"bold",
             		"confident"
 		]
 	},
@@ -95,9 +143,9 @@
 		],
 		"random_trait_constraint": [
 			"calm",
-            		"compassionate",
-            		"sincere",
-            		"quiet"
+            "compassionate",
+            "sincere",
+            "quiet"
 		]
 	},
 	{
@@ -108,10 +156,10 @@
 		],
 		"random_trait_constraint": [
 			"daring",
-            		"childish",
-            		"playful",
-            		"troublesome",
-            		"bullying"
+            "childish",
+            "playful",
+            "troublesome",
+            "bullying"
 		]
 	},
 	{
@@ -123,15 +171,17 @@
 		],
 		"random_trait_constraint": [
 			"loving",
-            		"compassionate",
-            		"sincere",
-            		"sweet"
+            "compassionate",
+    		"sincere",
+			"sweet"
 		]
 	},
 	{
 		"id": "platonic_inc_med8",
 		"interactions": [
 			"r_c is playing tag with m_c.",
+			"r_c bats a moss ball towards m_c to play.",
+			"r_c gets the zoomies with m_c.",
 			"r_c bats a bit of fluff in front of m_c and gets {PRONOUN/m_c/object} to play a game.",
 			"m_c and r_c pulled a prank together.",
 			"m_c and r_c are making faces at each other across camp and laughing."
@@ -139,7 +189,7 @@
 		"random_trait_constraint": [
 			"playful",
 			"childish",
-            		"troublesome"
+            "troublesome"
 		]
 	},
 	{
@@ -148,10 +198,11 @@
 			"m_c feels bad that {PRONOUN/m_c/subject} caused a problem for r_c.",
 			"m_c convinces r_c to help {PRONOUN/m_c/object} pull a prank on a Clanmate.",
 			"m_c made sure not to cause any trouble for r_c.",
-            		"m_c pulled a prank on r_c that {PRONOUN/m_c/subject} knew r_c would appreciate."
+            "m_c pulled a prank on r_c that {PRONOUN/m_c/subject} knew r_c would appreciate."
 		],
 		"main_trait_constraint": [
-			"troublesome"
+			"troublesome",
+			"childish"
 		],
 		"reaction_random_cat": {
 			"platonic": "increase"
@@ -192,13 +243,13 @@
 		"interactions": [
 			"m_c is hiding behind a bush ready to pounce on r_c.",
 			"m_c laughed at a childish joke r_c made.",
-            		"m_c and r_c are making faces at each other across camp and laughing."
+            "m_c and r_c are making faces at each other across camp and laughing."
 		],
 		"random_trait_constraint": [
 			"childish",
-            		"playful",
-            		"troublesome",
-            		"bouncy"
+            "playful",
+            "troublesome",
+            "bouncy"
 		]
 	},
 	{
@@ -207,8 +258,13 @@
 			"m_c wants to explore the whole territory with r_c!",
 			"m_c is having a wonderful time discussing recent Clan news with r_c.",
 			"m_c is happy to have a chance to chat with r_c.",
-            		"m_c playfully teased r_c about {PRONOUN/r_c/poss} love life.",
-            		"m_c wants to be an even better friend to r_c."
+            "m_c playfully teased r_c about {PRONOUN/r_c/poss} love life.",
+            "m_c wants to be an even better friend to r_c.",
+			"m_c claims that r_c is one of {PRONOUN/m_c/poss} best friends.",
+			"m_c always wants to say hello to r_c first thing in the morning.",
+			"m_c always asks where r_c is.",
+			"m_c always tries to get on patrols with r_c.",
+			"m_c always takes food to r_c."
 		],
 		"relationship_constraint": [
 			"platonic_40"
@@ -329,7 +385,7 @@
 			"m_c plays moss ball with r_c.",
 			"m_c proudly brought r_c a flower {PRONOUN/m_c/subject} found.",
 			"m_c decorates {PRONOUN/m_c/poss} nest with gifts that r_c brought {PRONOUN/m_c/object}.",
-            		"m_c took a nap with r_c."
+            "m_c took a nap with r_c."
 		],
 		"reaction_random_cat": {
 			"platonic": "increase"
@@ -348,9 +404,9 @@
 			"m_c is racing r_c back and forth across the camp clearing.",
 			"m_c hopes r_c will be {PRONOUN/m_c/poss} friend forever.",
 			"m_c let r_c win a game of moss ball.",
-            		"m_c and r_c are gagging at the idea of having mates when they grow up.",
-            		"m_c and r_c are seeing which one of them makes the best bird impression.",
-            		"m_c and r_c are trying to master how to croak like a frog together."
+            "m_c and r_c are gagging at the idea of having mates when they grow up.",
+            "m_c and r_c are seeing which one of them makes the best bird impression.",
+            "m_c and r_c are trying to master how to croak like a frog together."
 		],
 		"main_status_constraint": [
 			"kitten"
@@ -369,7 +425,31 @@
 		"id": "platonic_kit_inc_med3",
 		"interactions": [
 			"m_c ask r_c what it's like to be in training.",
-			"m_c begs r_c to show {PRONOUN/m_c/object} {PRONOUN/r_c/poss} moves."
+			"m_c begs r_c to show {PRONOUN/m_c/object} {PRONOUN/r_c/poss} moves.",
+			"m_c decorates {PRONOUN/m_c/poss} nest with gifts that r_c brought {PRONOUN/m_c/object}."
+		],
+		"main_status_constraint": [
+			"kitten"
+		],
+		"random_status_constraint": [
+			"elder",
+			"apprentice",
+			"warrior",
+			"mediator apprentice",
+			"mediator",
+			"medicine cat apprentice",
+			"medicine cat",
+			"deputy",
+			"leader"
+		],
+		"reaction_random_cat": {
+			"platonic": "increase"
+		}
+	},
+	{
+		"id": "platonic_kit_inc_med5",
+		"interactions": [
+			"m_c ask r_c what it's like to be in training."
 		],
 		"main_status_constraint": [
 			"kitten"
@@ -400,9 +480,9 @@
 			"m_c tells r_c that {PRONOUN/m_c/subject} caught this prey just for {PRONOUN/r_c/object} as {PRONOUN/m_c/subject} {VERB/m_c/deliver/delivers} it to {PRONOUN/r_c/object}.",
 			"m_c joins a game as r_c runs up to {PRONOUN/m_c/object} yowling that {PRONOUN/r_c/subject}{VERB/r_c/'re/'s} the greatest warrior ever and could never be defeated. The kit squeals in delight as m_c rolls over in surrender.",
 			"m_c tried scolding r_c for sneaking off, but couldn't stay mad at {PRONOUN/r_c/object}.",
-            		"m_c lets r_c play with {PRONOUN/m_c/poss} tail.",
-            		"m_c helped r_c find a toy {PRONOUN/r_c/subject} lost.",
-            		"m_c is impressing r_c with a well practiced bird call."
+            "m_c lets r_c play with {PRONOUN/m_c/poss} tail.",
+            "m_c helped r_c find a toy {PRONOUN/r_c/subject} lost.",
+            "m_c is impressing r_c with a well practiced bird call."
 		],
 		"main_status_constraint": [
 			"elder",
@@ -483,9 +563,9 @@
 			"m_c was playing with r_c and learned a fun new battle move from {PRONOUN/r_c/object}!",
 			"m_c is excitedly trying to guess what {PRONOUN/m_c/poss} and r_c's warrior names will be.",
 			"m_c is thinking up new ways to surprise an enemy with r_c, hoping to surprise their mentors next time they train together.",
-            		"m_c was playing with r_c and made up some super cool special battle moves!",
-            		"m_c is practicing battle cries with r_c.",
-            		"m_c offered to help r_c with {PRONOUN/r_c/poss} chores."
+            "m_c was playing with r_c and made up some super cool special battle moves!",
+    		"m_c is practicing battle cries with r_c.",
+        	"m_c offered to help r_c with {PRONOUN/r_c/poss} chores."
 		],
 		"main_status_constraint": [
 			"apprentice"
@@ -506,7 +586,7 @@
 			"m_c stays awake all night whispering secrets to r_c.",
 			"m_c promises not to tell r_c's mentor that {PRONOUN/r_c/subject}{VERB/r_c/'ve/'s} been sneaking out of camp.",
 			"m_c and r_c tried sneaking out of camp without their mentors.",
-            		"m_c and r_c successfully snuck out of camp without their mentors."
+            "m_c and r_c successfully snuck out of camp without their mentors."
 		],
 		"relationship_constraint": [
 			"platonic_40"
@@ -575,6 +655,17 @@
 		"interactions": [
 			"m_c wants to spend more time with r_c!",
 			"m_c is always happy to be around r_c.",
+			"m_c talks all the time about r_c.",
+			"m_c thinks very often about r_c.",
+			"m_c defends r_c in conversations.",
+			"m_c wants r_c to stay safe and happy.",
+			"m_c has a lot of fun with r_c!",
+			"r_c always knows how to make m_c laugh.",
+			"m_c doesn't think there's ever a dull moment with r_c.",
+			"m_c has had a great time hanging out with r_c lately.",
+			"m_c starts to plan things hoping that r_c will get involved.",
+			"m_c won't stand for slander about r_c.",
+			"m_c checks in on r_c every day.",
 			"m_c is glad to have a Clanmate like r_c."
 		]
 	},
@@ -599,6 +690,12 @@
 		"interactions": [
 			"m_c is having a wonderful time discussing recent Clan news with r_c.",
 			"m_c and r_c enjoy each other's company.",
+			"While looking at the stars, m_c and r_c make up some constellations.",
+			"m_c eats with r_c all the time!",
+			"m_c dispels a bad rumor about r_c.",
+			"m_c and r_c plan all their days together.",
+			"m_c and r_c always have something to share with each other.",
+			"The whole Clan notices how close m_c and r_c are being lately.",
 			"m_c is happy to run into r_c today."
 		],
 		"reaction_random_cat": {
@@ -614,7 +711,12 @@
 			"m_c couldn't imagine how boring things would be without a friend like r_c.",
 			"m_c and r_c can't get enough of each others company.",
 			"m_c wonders if {PRONOUN/m_c/subject}{VERB/m_c/'re/'s} r_c's friend in every reality...",
-            		"m_c thinks r_c is the best friend a cat could have."
+            "m_c thinks r_c is the best friend a cat could have.",
+			"m_c and r_c know more about each other than anyone else.",
+			"m_c always has something good to say about r_c.",
+			"m_c can think of a hundred good things to say about r_c.",
+			"Some of m_c's favorite memories are with r_c.",
+			"m_c couldn't imagine how boring things would be without a friend like r_c."
 		],
 		"relationship_constraint": [
 			"platonic_40"
@@ -626,6 +728,10 @@
 		"interactions": [
 			"m_c tells a joke that only r_c can understand.",
 			"m_c is always happy to grab some fresh-kill for r_c to share.",
+			"m_c is always happy to share a piece of fresh-kill with r_c.",
+			"m_c and r_c laugh over happy memories together.",
+			"m_c purrs whenever r_c comes around.",
+			"m_c and r_c don't start their days without one another.",
 			"m_c saved a piece of fresh-kill that {PRONOUN/m_c/subject} {VERB/m_c/know/knows} is r_c's favorite."
 		],
 		"relationship_constraint": [
@@ -642,10 +748,16 @@
 			"m_c can't imagine {PRONOUN/m_c/poss} life if {PRONOUN/m_c/subject} never met r_c.",
 			"m_c thinks of r_c as {PRONOUN/m_c/poss} best friend.",
 			"m_c and r_c are inseparable, and can almost always be found with each other.",
+			"Wherever r_c is found, m_c is always with {PRONOUN/r_c/object}.",
+			"Clanmates are envious of m_c and r_c's bond.",
+			"m_c and r_c can always rely on each other.",
+			"There's nothing that can separate m_c and r_c.",
+			"The first one to panic when r_c gets hurt is always m_c.",
+			"The Clan notices that m_c and r_c have picked up each other's mannerisms.",
 			"m_c goes to r_c any time {PRONOUN/m_c/subject} {VERB/m_c/have/has} any news to share.",
-            		"m_c knows r_c better than anyone.",
+            "m_c knows r_c better than anyone.",
 			"m_c asks r_c if {PRONOUN/r_c/subject} {VERB/r_c/think/thinks} they're best friends in every universe...",
-            		"m_c tells r_c that {PRONOUN/m_c/subject} {VERB/m_c/consider/considers} {PRONOUN/r_c/object} an invaluable member of the Clan."
+            "m_c tells r_c that {PRONOUN/m_c/subject} {VERB/m_c/consider/considers} {PRONOUN/r_c/object} an invaluable member of the Clan."
 		],
 		"relationship_constraint": [
 			"platonic_60"
@@ -656,6 +768,8 @@
 		"intensity": "high",
 		"interactions": [
 			"m_c thinks r_c tells the best stories.",
+			"m_c doesn't understand why no one visits r_c to listen to {PRONOUN/r_c/poss} great stories.",
+			"m_c always brings food to r_c so {PRONOUN/r_c/subject} {VERB/r_c/don't/doesn't} have to walk to the fresh-kill pile.",
 			"m_c listens to r_c talk about what life was like when {PRONOUN/r_c/subject} {VERB/r_c/were/was} young.",
 			"m_c values r_c's insights on life."
 		],
