--- a/resources/dicts/relationship_events/normal_interactions/trust/decrease.json
+++ b/resources/dicts/relationship_events/normal_interactions/trust/decrease.json
@@ -4,7 +4,17 @@
 		"intensity": "low",
 		"interactions": [
 			"m_c doesn't think that r_c has been completely honest lately.",
-			"m_c thinks r_c has been acting strangely."
+			"m_c thinks r_c has been acting strangely.",
+			"r_c won't tell m_c what's got {PRONOUN/r_c/object} acting weird.",
+			"m_c sees r_c whispering suspiciously to a Clanmate.",
+			"m_c smells something strange on r_c.",
+			"m_c feels like r_c has been quieter than usual.",
+			"m_c noticed that r_c wasn't in {PRONOUN/r_c/poss} nest last night.",
+			"m_c can't seem to find r_c anywhere, and no one else has seen {PRONOUN/r_c/object} either.",
+			"m_c asks r_c a simple question, but r_c reacts strangely to it.",
+			"r_c forgot something that m_c asked {PRONOUN/r_c/object} to remember.",
+			"r_c won't stop looking at a specific Clanmate while m_c talks to {PRONOUN/r_c/object}.",
+			"m_c has a weird feeling about something r_c said the other day."
 		]
 	},
 	{
@@ -12,7 +22,18 @@
 		"intensity": "low",
 		"interactions": [
 			"m_c shared a embarrassing story about r_c {PRONOUN/m_c/subject} {VERB/m_c/were/was} asked not to share...",
-			"m_c laughed at r_c when {PRONOUN/r_c/subject} tripped and didn't even ask if {PRONOUN/r_c/subject} needed help up."
+			"m_c laughed at r_c when {PRONOUN/r_c/subject} tripped and didn't even ask if {PRONOUN/r_c/subject} needed help up.",
+			"m_c's friend doesn't trust r_c.",
+			"m_c learns that r_c told a Clanmate one of {PRONOUN/m_c/poss} secrets.",
+			"r_c snitches on m_c for something minor.",
+			"m_c saw r_c hide something before talking to {PRONOUN/m_c/object}.",
+			"r_c won't tell m_c what {PRONOUN/r_c/subject} ate this morning.",
+			"r_c gets a strange expression when m_c walks up to ask a question.",
+			"m_c has to snap r_c out of a daze to ask a question.",
+			"m_c subtly accuses r_c of being untruthful about something.",
+			"r_c keeps asking m_c if {PRONOUN/m_c/subject} {VERB/m_c/trust/trusts} {PRONOUN/r_c/object}.",
+			"m_c finds out something small about r_c that r_c had lied about before."
+
 		],
 		"reaction_random_cat": {
 			"trust": "decrease"
@@ -37,14 +58,37 @@
 		"interactions": [
 			"m_c caught r_c in a lie.",
 			"r_c let m_c down when {PRONOUN/m_c/subject} {VERB/m_c/were/was} counting on {PRONOUN/r_c/object}.",
-			"r_c tripped m_c at the Gathering in front of all the Clans."
+			"r_c tripped m_c at the Gathering in front of all the Clans.",
+			"m_c knows that r_c just lied!",
+			"r_c gave m_c a gift that doesn't make sense.",
+			"r_c forgot something important about m_c.",
+			"r_c keeps calling m_c by the wrong name.",
+			"r_c sides with a Clanmate instead of m_c on something.",
+			"m_c thinks that r_c spread a rumor about {PRONOUN/m_c/object}.",
+			"m_c doesn't think that r_c's intentions are all pure.",
+			"m_c keeps thinking {PRONOUN/m_c/subject} {VERB/m_c/see/sees} r_c sneaking around the camp at night.",
+			"r_c keeps making excuses about something m_c wants to know.",
+			"m_c can't seem to get a straight answer from r_c lately.",
+			"r_c let m_c down while m_c was counting on {PRONOUN/r_c/object}."
 		]
 	},
 	{
 		"id": "trust_de_med2",
 		"interactions": [
 			"m_c said {PRONOUN/m_c/subject}'d cover for r_c, but when it came time, {PRONOUN/m_c/subject} got r_c in trouble.",
-			"m_c told r_c {PRONOUN/r_c/subject} could tell {PRONOUN/m_c/object} anything but when r_c took up the offer, m_c got {PRONOUN/r_c/object} in trouble."
+			"m_c told r_c {PRONOUN/r_c/subject} could tell {PRONOUN/m_c/object} anything but when r_c took up the offer, m_c got {PRONOUN/r_c/object} in trouble.",
+			"r_c doesn't want to apologize to m_c for something.",
+			"r_c asks m_c to stop following {PRONOUN/r_c/object} around.",
+			"r_c keeps avoiding eye contact with m_c.",
+			"m_c learns that r_c has been misleading {PRONOUN/m_c/object} about something trivial.",
+			"r_c does something that badly affects m_c.",
+			"r_c agrees to something for m_c that {PRONOUN/m_c/object} didn't want to do...",
+			"m_c and r_c can't seem to agree on the truth about something.",
+			"m_c asks r_c about a lie r_c told, but {PRONOUN/r_c/subject} {VERB/r_c/dodge/dodges} the question.",
+			"m_c realizes that r_c's been avoiding {PRONOUN/m_c/object}.",
+			"m_c knows that r_c is hiding something.",
+			"m_c was convinced that r_c was lying about something, but r_c wasn't.",
+			"The Clan realizes that m_c doesn't ask for help from r_c much lately."
 		],
 		"reaction_random_cat": {
 			"trust": "decrease"
@@ -56,12 +100,18 @@
 			"r_c is gossiping about m_c.",
 			"m_c is spreading a rumor about r_c.",
 			"m_c caught r_c slinking around the camp entrance in the middle of the night.",
-            		"m_c catches r_c doing something sneaky but when {PRONOUN/r_c/subject} {VERB/r_c/were/was} asked, r_c refused to give a straight answer.",
-            		"m_c catches r_c sneaking around.",
-            		"m_c catches r_c sneaking back into camp in the middle of the night."
+            "m_c catches r_c doing something sneaky but when {PRONOUN/r_c/subject} {VERB/r_c/were/was} asked, r_c refused to give a straight answer.",
+            "m_c catches r_c sneaking around.",
+            "m_c catches r_c sneaking back into camp in the middle of the night.",
+			"r_c tries to dig into one of m_c's secrets.",
+			"m_c finds r_c trying to eavesdrop into one of {PRONOUN/m_c/poss} conversations.",
+			"m_c wakes up to r_c trying to steal a piece of {PRONOUN/m_c/poss} nest.",
+			"m_c is spreading a rumor about r_c."
 		],
 		"random_trait_constraint": [
-			"sneaky"
+			"sneaky",
+			"childish",
+			"vengeful"
 		]
 	},
 	{
@@ -70,8 +120,12 @@
 			"m_c constantly pulls pranks on r_c.",
 			"m_c is relentlessly pestering r_c.",
 			"m_c keeps pouncing on r_c's tail despite being told to stop.",
-            		"r_c hissed at m_c.",
-            		"r_c caught m_c misbehaving even though {PRONOUN/m_c/subject} promised to be on {PRONOUN/m_c/poss} best behavior."
+            "r_c hissed at m_c.",
+            "r_c caught m_c misbehaving even though {PRONOUN/m_c/subject} promised to be on {PRONOUN/m_c/poss} best behavior.",
+			"m_c always shifts the blame to r_c!",
+			"m_c won't stop crying whenever r_c starts winning in a game.",
+			"m_c grins while r_c is being scolded by an older Clanmate.",
+			"m_c is relentlessly pestering r_c."
 		],
 		"relationship_constraint": [
 			"dislike_40"
@@ -89,6 +143,12 @@
 		"intensity": "high",
 		"interactions": [
 			"m_c goes to tell a secret to r_c only for r_c to tell someone else's secret to {PRONOUN/m_c/object}.",
+			"r_c doesn't believe m_c when {PRONOUN/m_c/subject} {VERB/m_c/explain/explains} that a rumor about {PRONOUN/m_c/object} is false.",
+			"m_c learns that r_c has been using {PRONOUN/m_c/object} for something.",
+			"m_c doubts whether r_c even likes {PRONOUN/m_c/object} at all...",
+			"r_c uses a fear of m_c's against {PRONOUN/m_c/object}.",
+			"r_c accidentally hurts m_c during an argument between them.",
+			"m_c thinks r_c is trying to steal one of {PRONOUN/m_c/poss} friends!",
 			"m_c turned to r_c in a time of need, only for r_c to abandon {PRONOUN/m_c/object}."
 		]
 	},
@@ -98,7 +158,18 @@
 		"interactions": [
 			"m_c tries to scare r_c.",
 			"m_c dismisses r_c's reasonable concerns and fears and tells {PRONOUN/r_c/object} to get over it.",
-            		"m_c pulls a mean-spirited prank on r_c."
+			"m_c accuses r_c of being in cahoots with a cat from another Clan.",
+			"m_c publicly accuses r_c of breaking the Warrior Code.",
+			"m_c is blindsighted by r_c completely betraying {PRONOUN/m_c/object}.",
+			"m_c threatens to blackmail r_c.",
+			"m_c and r_c refuse to trust one another, which nearly leads to one of them getting hurt.",
+			"r_c's prank on m_c almost turned deadly.",
+			"r_c has been pitting a Clanmate against m_c.",
+			"m_c claims to have had a prophetic dream about r_c betraying the Clan.",
+			"m_c and r_c tell everyone embarrassing secrets about the other.",
+			"r_c destroys something dear to m_c.",
+			"r_c blackmails m_c with one of {PRONOUN/m_c/poss} secrets.",
+            "m_c pulls a mean-spirited prank on r_c."
 		],
 		"relationship_constraint": [
 			"dislike_40"
@@ -148,11 +219,11 @@
 			"m_c isn't sure why r_c became a medicine cat at all since {PRONOUN/r_c/subject} {VERB/r_c/seem/seems} to not like helping any cats.",
 			"m_c wouldn't be surprised if r_c faked signs from StarClan...",
 			"m_c makes absolutely sure r_c gave {PRONOUN/m_c/object} the right herbs.",
-            		"m_c lashes {PRONOUN/m_c/poss} tail as r_c dismisses {PRONOUN/m_c/poss} health concerns as nothing serious.",
-            		"r_c claimed m_c was lying about an injury and refused to even look at it.",
-            		"r_c claimed m_c was lying about an illness and refused to even check.",
-            		"r_c ignored m_c when {PRONOUN/m_c/subject} needed treatment.",
-            		"m_c is doubting whether r_c has any connection to StarClan at all."
+            "m_c lashes {PRONOUN/m_c/poss} tail as r_c dismisses {PRONOUN/m_c/poss} health concerns as nothing serious.",
+            "r_c claimed m_c was lying about an injury and refused to even look at it.",
+            "r_c claimed m_c was lying about an illness and refused to even check.",
+            "r_c ignored m_c when {PRONOUN/m_c/subject} needed treatment.",
+            "m_c is doubting whether r_c has any connection to StarClan at all."
 		],
 		"random_status_constraint": [
 			"medicine cat"
@@ -173,7 +244,7 @@
 			"m_c hopes to never have a serious illness with r_c in charge of treatments...",
 			"m_c complains that r_c never takes {PRONOUN/r_c/poss} role of medicine cat seriously.",
 			"m_c can't keep r_c's attention long enough to tell {PRONOUN/r_c/object} what {PRONOUN/m_c/object} {VERB/m_c/need/needs} help with.",
-            		"r_c didn't notice m_c when {PRONOUN/m_c/subject} needed treatment."
+            "r_c didn't notice m_c when {PRONOUN/m_c/subject} needed treatment."
 		],
 		"random_status_constraint": [
 			"medicine cat"
@@ -193,7 +264,7 @@
 			"m_c doesn't understand how StarClan could grant a cat as cold and uncaring as r_c nine lives.",
 			"When it comes down to it, m_c doesn't think {PRONOUN/m_c/subject} could follow r_c's every order.",
 			"m_c wonders if {PRONOUN/m_c/subject} could run away from the Clan if necessary...",
-            		"m_c wonders if exile is really so bad given current Clan leadership..."
+            "m_c wonders if exile is really so bad given current Clan leadership..."
 		],
 		"random_status_constraint": [
 			"leader"
